parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@sets.py-2.snap
---
source: parser/src/lexer/mod.rs
description: "{a,\nb, c}"
input_file: parser/test_data/inputs/one_liners/sets.py
---
[
    Token {
        kind: LeftBracket,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 1,
        end: 2,
    },
    Token {
        kind: Comma,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 4,
        end: 5,
    },
    Token {
        kind: Comma,
        value: None,
        start: 5,
        end: 6,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 7,
        end: 8,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 8,
        end: 9,
    },
]
