parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@string.py-2.snap
---
source: parser/src/lexer/mod.rs
description: "raw = r'raw_text\\n'"
input_file: parser/test_data/inputs/one_liners/string.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "raw",
        ),
        start: 0,
        end: 3,
    },
    Token {
        kind: Assign,
        value: None,
        start: 4,
        end: 5,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "r'raw_text\\n'",
        ),
        start: 6,
        end: 19,
    },
]
