parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@string.py-3.snap
---
source: parser/src/lexer/lexer.rs
description: "y = \"\"\"multi\"\"\""
input_file: parser/test_data/inputs/one_liners/string.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "y",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Assign,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "\"\"\"multi\"\"\"",
        ),
        start: 4,
        end: 15,
    },
]
