parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@string.py.snap
---
source: parser/src/lexer/mod.rs
description: "x = 'simple text\\n'"
input_file: parser/test_data/inputs/one_liners/string.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "x",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Assign,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: StringLiteral,
        value: Str(
            "'simple text\\n'",
        ),
        start: 4,
        end: 19,
    },
]
